# stm32-cube

./: .gitignore  Cargo.toml  README.md
_firmware/src/: main.rs
common/: Cargo.toml
common/src/: apa106led.rs  colour_functions.rs  cube.rs  lib.rs  state.rs  voxel.rs
common/src/patterns/: christmas_puke.rs  mod.rs  police.rs  rainbow.rs  slices.rs  slow_rain.rs
common/src/transitions/: cross_fade.rs  fade_from_black.rs  fade_to_black.rs  mod.rs
firmware/: Cargo.toml  freq-calc.xlsx
firmware/src/: apa106led.rs  cube.rs  embedded_rand.rs  lib.rs  patterns.rs
firmware/testsuite/: Cargo.toml
firmware/testsuite/tests/: test.rs
simulator/: Cargo.toml
simulator/src/: main.rs
simulator/src/patterns/: mod.rs  police.rs  rainbow.rs  slow_rain.rs
simulator/src/transitions/: cross_fade.rs  fade_to_black.rs  mod.rs
src/: colour_functions.rs  cube.rs  main.rs
