[package]
name = "stm32-cube"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
panic-semihosting = "0.5.3"
cortex-m-rt = "0.6.11"
cortex-m = "0.6.1"

[dependencies.stm32f1xx-hal]
version = "0.5.2"
# path = "../stm32f1xx-hal"
features = [ "stm32f103" ]
