[package]
name = "common"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "1.1.0"
rand = { version = "0.7.3", default-features = false, features = [ "small_rng" ] }
