[package]
name = "simulator"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { version = "=0.7.0-alpha.2", path = "../../embedded-graphics" }
embedded-graphics-simulator = { version = "*", path = "../../simulator" }
sdl2 = "0.32.2"
common = { path = "../common" }
rand = { version = "0.7.3", default-features = false, features = [ "small_rng" ] }
