[package]
name = "simulator"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
default-run = "simulator"

[dependencies]
embedded-graphics = { version = "=0.7.0-alpha.2", path = "../../embedded-graphics" }
embedded-graphics-simulator = { version = "*", path = "../../simulator" }
sdl2 = "0.32.2"
common = { path = "../common" }
nalgebra = "0.23.1"
kiss3d = "0.28.0"
